--- a/themes/base-bootstrap/templates/cart/parts/modify_shipping_button.twig
+++ b/themes/base-bootstrap/templates/cart/parts/modify_shipping_button.twig
@@ -1,9 +1,9 @@
 {# @var cart \inklabs\kommerce\EntityDTO\CartDTO #}
 
-{% set class = 'btn btn-info btn-sm' %}
+{% set class = 'btn btn-info btn-sm ' ~ extraClass %}
 
 {% if env.shippingType.isFlatRate %}
-    <a href="cart/estimate-tax" class="btn btn-info btn-sm estimate-tax">
+    <a href="cart/estimate-tax" class="{{ class }} estimate-tax">
         {% if cart.shipmentRate.rate.amount is null %}
             Estimate Tax
         {% else %}
@@ -11,7 +11,7 @@
         {% endif %}
     </a>
 {% else %}
-    <a href="cart/estimate-shipping" class="btn btn-info btn-sm estimate-shipping">
+    <a href="cart/estimate-shipping" class="{{ class }} estimate-shipping">
         {% if cart.shipmentRate.rate.amount is null %}
             Estimate Shipping & Tax
         {% else %}
