Fixing responsive table.

--- a/themes/base-bootstrap/templates/helper/order_details.twig
+++ b/themes/base-bootstrap/templates/helper/order_details.twig
@@ -83,7 +83,7 @@
                     <th>Item</th>
                     <th></th>
                     <th class="text-right">Qty</th>
-                    <th class="text-right hidden-xxs">Unit Price</th>
+                    <th class="text-right hidden-xs">Unit Price</th>
                     <th class="text-right">Total</th>
                 </tr>
             </thead>
