Adding breadcrumbs and user account page.

--- a/themes/base-bootstrap/templates/user/view_order.twig
+++ b/themes/base-bootstrap/templates/user/view_order.twig
@@ -3,12 +3,10 @@
 
 {% block pageTitle %}Order #{{ order.referenceNumber }}{% endblock %}
 
-{# TODO: #}
-{#$breadcrumbs = [#}
-    {#'Your Account' => '/user/account',#}
-    {#'Order Details' => $order->url,#}
-{#];#}
-{#View::set_global('breadcrumbs', $breadcrumbs);#}
+{% set breadcrumbs = {
+    'Your Account': 'user/account',
+    'Order Details': 'user/view-order/' ~ order.id.getHex()
+} %}
 
 {% block content %}
     <div class="container">
