--- a/themes/base-bootstrap/templates/layout/parts/breadcrumbs.twig
+++ b/themes/base-bootstrap/templates/layout/parts/breadcrumbs.twig
@@ -1,26 +1,24 @@
 {% if breadcrumbs is defined %}
-<div class="container">
-    <div class="row">
-        <div class="col-sm-12">
-            <ol class="breadcrumb">
-                {# TODO:
-                <?php
-                $current_uri = URL::site(Request::current()->uri());
-                foreach ($breadcrumbs as $name => $uri) {
-                if ($current_uri == $uri) {
-                echo '<li class="active">' . $name . '</li>';
-                } else {
-                if ($uri === null) {
-                echo '<li>' . $name . '</li>';
-                } else {
-                echo '<li>' . HTML::anchor($uri, $name) . '</li>';
-                }
-                }
-                }
-                ?>
-                #}
-            </ol>
+    {% set currentPath = currentPath() %}
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <ol class="breadcrumb">
+                    {% for name, path in breadcrumbs %}
+                        {% if currentPath == path %}
+                            <li class="active">{{ name }}</li>
+                        {% else %}
+                            {% if path is empty %}
+                                <li>{{ name }}</li>
+                            {% else %}
+                                <li>
+                                    <a href="/{{ path }}">{{ name }}</a>
+                                </li>
+                            {% endif %}
+                        {% endif %}
+                    {% endfor %}
+                </ol>
+            </div>
         </div>
     </div>
-</div>
 {% endif %}
