--- a/themes/base-bootstrap/templates/user/account.twig
+++ b/themes/base-bootstrap/templates/user/account.twig
@@ -27,7 +27,7 @@
                         <tr>
                             <th>Password:</th>
                             <td>
-                                <a href="/user/account/change_password"
+                                <a href="/user/change-password"
                                    class="btn btn-default btn-xs pull-right">
                                     Edit Password
                                 </a>
