--- a/themes/base-bootstrap/templates/layout/parts/head.twig
+++ b/themes/base-bootstrap/templates/layout/parts/head.twig
@@ -9,7 +9,7 @@
 {% if pageCanonicalUrl is not empty %}
     <link rel="canonical" href="{{ pageCanonicalUrl }}" />
 {% endif %}
-<link rel="stylesheet" href="/s?p=main.scss&formatter=compact">
+<link rel="stylesheet" href="{{ routeUrl('style.serve') }}?p=main.scss&formatter=compact">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
