--- a/themes/base-bootstrap/templates/cart/parts/product_quantity_discount_upsell.twig
+++ b/themes/base-bootstrap/templates/cart/parts/product_quantity_discount_upsell.twig
@@ -12,7 +12,7 @@
                 {% set priceEach = totalOff / numberMore %}
 
                 {% if priceEach < cartItem.price.unitPrice %}
-                    <form action="/cart/update-quantity" method="post" class="form-inline" style="margin-top: 15px">
+                    <form action="{{ routeUrl('cart.update-quantity') }}" method="post" class="form-inline" style="margin-top: 15px">
                         <input type="hidden" name="_token" value="{{ CSRF_TOKEN }}">
 
                         <input type="hidden" name="id" value="{{ cartItem.id.getHex() }}" />
