--- a/themes/base-bootstrap/templates/cart/parts/totals.twig
+++ b/themes/base-bootstrap/templates/cart/parts/totals.twig
@@ -58,7 +58,7 @@
                     {% for coupon in cart.cartTotal.coupons %}
                         <div class="row">
                             <div class="col-sm-10">
-                                <form action="/cart/remove-coupon"
+                                <form action="{{ routeUrl('cart.remove-coupon') }}"
                                       method="post"
                                       role="form">
                                     <input type="hidden" name="_token" value="{{ CSRF_TOKEN }}">
