--- a/themes/base-bootstrap/templates/layout/parts/footer.twig
+++ b/themes/base-bootstrap/templates/layout/parts/footer.twig
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <a href="/conditions">Conditions of Use</a>
-                | <a href="/privacy">Privacy</a>
+                <a href="{{ routeUrl('page.conditions') }}">Conditions of Use</a>
+                | <a href="{{ routeUrl('page.privacy') }}">Privacy</a>
                 {# TODO: <?=SITE_COPY?> #}
             </div>
         </div>
