--- a/themes/base-bootstrap/templates/layout/parts/header-checkout.twig
+++ b/themes/base-bootstrap/templates/layout/parts/header-checkout.twig
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">{{ SITE_NAME | default('Kommerce') }} - Secure Checkout</a>
+            <a class="navbar-brand" href="{{ routeUrl('home') }}">{{ SITE_NAME | default('Kommerce') }} - Secure Checkout</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -31,7 +31,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/login">Sign In</a></li>
-                <li><a href="/cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+                <li><a href="{{ routeUrl('cart.show') }}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
             </ul>
         </div>
     </div>
