--- a/themes/base-bootstrap/templates/user/change_password.twig
+++ b/themes/base-bootstrap/templates/user/change_password.twig
@@ -15,7 +15,7 @@
         <br>
         <div class="row">
             <div class="col-sm-4 col-sm-offset-1">
-                <form action="/user/change-password"
+                <form action="{{ routeUrl('user.change-password') }}"
                       method="post"
                       id="change-password"
                       class="form"
